2012-09-24  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-sdl.c, audio-dummy.c (avt_set_audio_end_key):
	new function
	(avt_wait_audio_end): adapted
	avatar-sdl.c (avt_navigate): adapted

2012-09-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_update): no delay anymore

2012-09-08  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_push_key): new function

	* audio-sdl.c (fill_audio): sends pseudo-key on audio end
	avatar-sdl.c (avt_navigate): adapted

	* akfavatar.h, avatar-sdl.c (avt_key_pressed, avt_clear_keys):
	new functions

2012-09-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_push_key, avt_analyze_key)
	(avt_clear_keys, avt_wait_key): new functions
	(avt_analyze_event, avt_key, avt_reset): adapted
	(avt_choice, avt_decide, avt_pager): adapted

	* avatar-sdl.c (avt_start, avt_quit): load base button globally

	* avatar-sdl.c (avt_show_button): new function

	* avatar-sdl.c (avt_clear_buttons): new function

	* avatar-sdl.c (avt_check_buttons): new function

2012-09-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt): bundle most settings in one structure

2012-08-29  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c (get_directory): improved memory mangagement
	don't use scandir anymore

------------------------------------------------------------------------

2012-08-28  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.22.1 released

2012-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-common.c (avt_prepare_raw_audio):
	renamed from avt_prepare_raw_audio_data

	* pascal/akfavatar.pas: do not move the avatar in automatically

2012-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (AVT_FOOTER, AVT_HEADER):
	new modes replace AVT_SEPARATE

	* akfavatar.h, avatar-sdl.c (avt_avatar_mode):
	replaces avt_balloon_mode

2012-08-06  Andreas K. Foerster  <info@akfoerster.de>
